fix coverage pill spacing on mobile

--- a/src/Components/Pages/Results/Results.scss
+++ b/src/Components/Pages/Results/Results.scss
@@ -18,13 +18,13 @@
 
   .result-headline {
     .coverage-pill {
-      padding: 0 1.125rem;
+      padding: 0 1.125rem 0.375rem;
       border-radius: 2.75rem;
       box-decoration-break: clone;
       white-space: nowrap;
       @include for-tablet-potrait-down {
         white-space: unset;
-        line-height: 1.5em;
+        line-height: 1.75em;
       }
 
       &.green {
@@ -49,7 +49,6 @@
       .coverage-pill {
         display: inline-flex;
         line-height: 110%;
-        padding-bottom: 0.375rem;
       }
     }
   }
